Corregi algunos errores y Organice carpetas